# oxrq

./: Cargo.toml  README.md
src/: main.rs
test/: test_cli.sh
test/resources/: file0.ttl  file1.rdf  file1.ttl  query1.rq
